--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+._navbar
+{
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  background-color: rebeccapurple;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 30px;
+} 
+._unorderedList
+{
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+}
+._inputTextField
+{
+  position: relative;
+    width: 11cm;
+    height: 35px;
+    top: 10px;
+    border: 1px solid white;
+    outline: none;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 15px;
+}
+._li
+{
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
